--- a/Site(HTML,CSS,Bootstrap,PHP)/index.html
+++ b/Site(HTML,CSS,Bootstrap,PHP)/index.html
@@ -72,11 +72,12 @@
 </div>
 	
 	
-	<div class="glinf">
-		<div class="container">
-		<h3 id="glinf" align="center">У нас вы найдёте большой выбор металлопрофиля, ворот, калиток, козырьки любого размера</h3>
-		</div>
+<div class="advertisement-line">
+	<div class="container">
+	<h3 class="advertisement-article">У нас вы найдёте большой выбор металлопрофиля, ворот, калиток, козырьки любого размера</h3>
 	</div>
+</div>
+	
 	
 	
 	<div class="container">
@@ -84,22 +85,22 @@
 			<div id="111" class="col-md-12">
 				<div class="row">
 					<div class="col-md-6">
-					<h3><img class="imgzab" src="img/4.jpg" style="width: 85%; height: 250px;"><br><a href="zabory.html"><b>Заборы из металлопрофиля</b></a></h3>
-					<h4 id="h444">Забор создаёт защиту, надежность и спокойствие вашему дому.  Наши заборы долговечны, не потеряют свою привлекательность, создадут стиль дому и статус владельцу.</h4>
+					<h3><img class="img-zab" src="img/4.jpg" alt=""><br><a href="zabory.html"><b>Заборы из металлопрофиля</b></a></h3>
+					<h4 class="products-article">Забор создаёт защиту, надежность и спокойствие вашему дому.  Наши заборы долговечны, не потеряют свою привлекательность, создадут стиль дому и статус владельцу.</h4>
 					</div>
 					<div  class="col-md-6">
-					<h3><img class="imgzab" src="img/5.jpg" style="width: 85%; height: 250px;"><br><a href="vorota.html"><b>Ворота</b></a></h3>
-					<h4 id="h444">Для удобного въезда на участок вашего автомобиля необходимы распашные или откатные ворота. Учитывая ваши пожелания, исходя от ширины улицы, размеров парковки на участке и количества автомобилей мы предложим самый удачный и оптимальный вариант только для вас. </h4>
+					<h3><img class="img-zab" src="img/5.jpg" alt=""><br><a href="vorota.html"><b>Ворота</b></a></h3>
+					<h4 class="products-article">Для удобного въезда на участок вашего автомобиля необходимы распашные или откатные ворота. Учитывая ваши пожелания, исходя от ширины улицы, размеров парковки на участке и количества автомобилей мы предложим самый удачный и оптимальный вариант только для вас. </h4>
 					</div>
 				</div>
 				<div class="row">
 					<div  class="col-md-6">
-					<h3><img class="imgzab" src="img/6.jpg" style="width: 85%; height: 250px;"><br><a href="kalitki.html"><b>Калитки</b></a></h3>
-					<h4 id="h444">Не маловажным элементом при ограждении участка является калитка. Мы изготавливаем калитки с различным заполнением. Чаще всего используется тот же материал что и при изготовлении забора. </h4>
+					<h3><img class="img-zab" src="img/6.jpg" alt=""><br><a href="kalitki.html"><b>Калитки</b></a></h3>
+					<h4 class="products-article">Не маловажным элементом при ограждении участка является калитка. Мы изготавливаем калитки с различным заполнением. Чаще всего используется тот же материал что и при изготовлении забора. </h4>
 					</div>
 					<div  class="col-md-6">
-					<h3><img class="imgzab" src="img/7.jpg" style="width: 85%; height: 250px;"><br><a href="kozurki.html"><b>Козырьки</b></a></h3>
-					<h4 id="h444"> Козырек – это функциональный элемент, который оформляет входную дверь и защищает от непогоды и палящего солнца. Козырек создаст надежную защиту вашей двери от коррозий, промоканий и цветовых изменений. Поэтому он должен быть красивым и практичным, создавая хорошее впечатление.</h4>
+					<h3><img class="img-zab" src="img/7.jpg" alt=""><br><a href="kozurki.html"><b>Козырьки</b></a></h3>
+					<h4 class="products-article"> Козырек – это функциональный элемент, который оформляет входную дверь и защищает от непогоды и палящего солнца. Козырек создаст надежную защиту вашей двери от коррозий, промоканий и цветовых изменений. Поэтому он должен быть красивым и практичным, создавая хорошее впечатление.</h4>
 					</div>
 				</div>
 			</div>
@@ -140,12 +141,12 @@ function check() {
     <div class="modal-dialog">
        <div class="modal-content">
           <div class="modal-header"><button class="close" type="button" data-dismiss="modal">x</button>
-             <h2 class="modal-title" id="myModalLabel" align=center>Вход администратором</h2>
+             <h2 class="modal-title" id="myModalLabel">Вход администратором</h2>
           </div>
 			<div class="modal-body">
 				<form action="enter.php" method="post">
-					<p align=center>Введите пароль: <input class="input" onkeyup="check();" type="password" name="paswd" style="width:35%" /></p>
-					<p align=center><input value="Войти" name="submit" type="submit" id="button123" disabled="disabled" /></p>
+					<p>Введите пароль: <input class="input" onkeyup="check();" type="password" name="paswd" style="width:35%" /></p>
+					<p><input value="Войти" name="submit" type="submit" id="button123" disabled="disabled" /></p>
 				</form>
 			</div>
 		</div>
